--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -8,12 +8,13 @@
 }
 
 .my-container {
-    height: 86vh;
+    height: 79vh;
 }
 
 .circle1 {
     background-image: url('../img/chicken.jpg');
     background-size: contain;
+    background-position: center;
     background-repeat: no-repeat;
     height: 15em;
 }
@@ -21,6 +22,7 @@
 .circle2 {
     background-image: url('../img/pasta.jpg');
     background-size: contain;
+    background-position: center;
     background-repeat: no-repeat;
     height: 15em;
 }
@@ -28,7 +30,16 @@
 .circle3 {
     background-image: url('../img/salad.jpg');
     background-size: contain;
+    background-position: center;
     background-repeat: no-repeat;
     height: 15em;
 }
 
+.recipe-container {
+    width: 100%;
+    height: 50vh;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    
+}
