--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,7 +4,7 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-
+@import '_base.scss';
 // custom variables
 @import "custom-bootstrap-variables"; 
 
